Adjusted select box CSS to render better in Firefox.  Fixed a broken <p> tag in post edit view that caused weird spacing in Safari.

--- a/anchor/views/assets/css/forms.css
+++ b/anchor/views/assets/css/forms.css
@@ -79,9 +79,9 @@ select {
 	display: block;
 	float: left;
 	height: 39px;
-	padding-left: 20px;
+	padding: 9px 0 8px 20px;
 
-	font: 15px/39px "Helvetica Neue", sans-serif;
+	font: 15px/22px "Helvetica Neue", sans-serif;
 
 	border: none;
 	border-radius: 0 5px 5px 0;
